<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.jono</groupId>
    <artifactId>spring-boot-lab</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <!--        <module>async-reactive</module>-->
        <!--        <module>batch-jobs</module>-->
        <!--        <module>cloud</module>-->
        <module>core</module>
        <!--        <module>integration</module>-->
        <!--        <module>observability</module>-->
        <module>graphql</module>
        <module>messaging</module>
        <module>rest-api</module>
        <module>websocket</module>
        <!--        <module>security</module>-->
    </modules>

    <properties>
        <java.version>21</java.version>
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version>
        <spring-boot.version>3.5.6</spring-boot.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>--enable-preview</compilerArgs>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <configuration>
                        <compilerArguments>--enable-preview</compilerArguments>
                        <jvmArguments>--enable-preview</jvmArguments>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
